# daily_manager

./: .gitignore  README.md  pyproject.toml
.docker/: Dockerfile  docker-compose.yml  requirements.txt
.env/: .env
core/: settings.py  urls.py
core/layout/: views.py
core/layout/static/layout/css/: base.css  sb-admin-2.css  sb-admin-2.min.css
core/layout/static/layout/js/demo/: chart-area-demo.js
core/layout/static/layout/vendors/fontawesome-free/: package.json
core/layout/templates/layout/: base.html  dashboard.html  footer.html  index.html  logout.html  sidebar.html  topbar.html
core/managers/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
core/managers/migrations/: 0001_initial.py  0002_auto_20200719_1626.py  0003_auto_20200731_0300.py  0004_auto_20200731_0302.py  0005_auto_20200731_0320.py  0006_auto_20200731_0322.py
core/managers/static/managers/css/: list.css  register.css
core/managers/templates/managers/order/: list.html  register.html
