[tool.poetry]
name = "daily_manager"
version = "0.1.0"
description = "Sytem for controll daily expenses."
authors = ["MIT"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
python-decouple = "^3.3"
psycopg2 = "^2.8.5"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.3"
ptvsd = "^4.3.2"
flake8 = "^3.8.3"
ipdb = "^0.13.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
